[gd_scene load_steps=3 format=2]

[ext_resource path="res://Settings.gd" type="Script" id=1]
[ext_resource path="res://assets (2)/dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=2]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_left = 216.0
margin_top = 184.0
margin_right = 264.0
margin_bottom = 198.0
text = "Ajustes"

[node name="Label" type="Label" parent="."]
margin_left = 160.0
margin_top = 232.0
margin_right = 208.0
margin_bottom = 246.0
text = "Sonido:"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 216.0
margin_top = 232.0
margin_right = 360.0
margin_bottom = 248.0
value = 100.0

[node name="Tornar" type="Button" parent="."]
margin_left = 224.0
margin_top = 432.0
margin_right = 266.0
margin_bottom = 452.0
text = "Back"

[node name="CheckButton" type="CheckButton" parent="."]
margin_left = 152.0
margin_top = 248.0
margin_right = 344.0
margin_bottom = 288.0
text = "Silenciar Musica"

[node name="CheckFullscreen" type="CheckButton" parent="."]
margin_left = 152.0
margin_top = 280.0
margin_right = 347.0
margin_bottom = 320.0
text = "Pantalla Completa"

[node name="CheckZen" type="CheckButton" parent="."]
margin_left = 200.0
margin_top = 312.0
margin_right = 305.0
margin_bottom = 352.0
text = "ZEN"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 0.114
autoplay = true

[node name="MenuButton" type="MenuButton" parent="."]
margin_left = 192.0
margin_top = 352.0
margin_right = 282.0
margin_bottom = 384.0
text = "DIFICULTAD"

[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Tornar" to="." method="_on_Tornar_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="CheckFullscreen" to="." method="_on_CheckFullscreen_toggled"]
[connection signal="toggled" from="CheckZen" to="." method="_on_CheckZen_toggled"]
